--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ httpx = "^0.24.1"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
 pytest-cov = "^4.0.0"
+pre-commit = "^3.3.2"
 
 [build-system]
 requires = ["poetry-core"]
