--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,8 +5,9 @@ repos:
     rev: 5.0.4
     hooks:
     -   id: flake8
-        args:
-          - "--max-line-length=80"
+        args: [
+            "--max-line-length=80",
+            "--per-file-ignores=blackjack/controller/app.py:F405"]
 -   repo: https://github.com/PyCQA/isort
     rev: 5.12.0
     hooks:
