--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,15 @@ uvicorn = "^0.22.0"
 httpx = "^0.24.1"
 python-jose = "^3.3.0"
 python-multipart = "^0.0.6"
+requests = "^2.32.3"
+sseclient = "^0.0.27"
+pytest = "^8.3.4"
+pytest-asyncio = "^0.25.2"
+aiounittest = "^1.4.2"
 
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.3.1"
+pytest = "^8.3.4"
 pytest-cov = "^4.0.0"
 pre-commit = "^3.3.2"
 
